# htm.core

./: .dockerignore  .gitignore  AirGapBuild.md  CMakeLists.txt  CPackConfig.cmake  CommonCompilerConfig.cmake  DEPENDENCIES.md  Dockerfile  Dockerfile.debian  README.md  dumpbin_output.txt  get_version.py  htm_install.py  htm_test.py  list_wheel_contents.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: amd64-debian.yml  amd64.yml  arm.yml  pr.yml
bindings/py/: README.md
bindings/py/cpp_src/: CMakeLists.txt
bindings/py/cpp_src/bindings/algorithms/: py_SpatialPooler.cpp
bindings/py/tests/sdr/: SDR_test.py
py/htm/: __init__.py
py/htm/advanced/algorithms/: apical_tiebreak_temporal_memory.py  connections.py  location_modules.py  single_layer_location_memory.py
py/htm/advanced/examples/single_layer_2d_experiment/: experiment_logging.py  profile.html  profile.json  runner.py  visualize_confusion.py  visualize_success.py
py/htm/advanced/examples/single_layer_2d_experiment/visualizations/: package-lock.json  package.json
py/htm/advanced/examples/single_layer_2d_experiment/visualizations/py/htmresearchviz0.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py/htm/advanced/examples/union_path_integration/: multi_column_convergence.py
py/htm/advanced/support/: numpy_helpers.py
py/htm/bindings/: __init__.py
py/htm/optimization/: ae.py
py/tests/: utils_test.py
py/tests/advanced/algorithms/: advanced_connections_test.py  column_pooler_test.py  column_pooler_unit_test.py
py/tests/advanced/algorithms/apical_tiebreak_temporal_memory/: attm_sequence_memory_test.py
py/tests/advanced/frameworks/location/: location_network_creation_test.py
py/tests/advanced/regions/: L46aNetwork_test.py  column_pooler_region_test.py  location_region_test.py
py/tests/algorithms/: anomaly_likelihood_test.py  anomaly_test.py
py/tests/encoders/: coordinate_test.py  date_test.py
py/tests/networkapi/: dimensions_test.py  getParameters_test.py  run_test.py  sinewave_test.py
py/tests/rest/: htm_rest_api_test.py
src/: CMakeLists.txt
src/examples/hello/: HelloSPTP.cpp
src/examples/mnist/: MNIST_SP.cpp
src/htm/ntypes/: Value.cpp
src/htm/regions/: TMRegion.cpp
src/test/: CMakeLists.txt
src/test/unit/algorithms/: TemporalMemoryTest.cpp
src/test/unit/regions/: ClassifierRegionTest.cpp
